# siwes-logbook-automation

./: .env.example  .gitignore  README.md  add_call_type_column.py  add_supervisor_to_student.py  check_db_state.py  debug_orm.py  init_tables.py  main.py  pyproject.toml  requirements.txt  reset_db.py  seed_db.py  seed_real_data.py  test_import.py  test_init.py  test_seed.py
app/: __init__.py  config.py
app/application/: __init__.py
app/application/services/: __init__.py  auth.py  daily.py  geofence.py  log.py  notification.py  notifications.py  review.py  sync.py
app/domain/: __init__.py
app/domain/models/: __init__.py  base.py  call.py  chat.py  log.py  placement.py  user.py
app/infrastructure/: __init__.py
app/infrastructure/database/: __init__.py  connection.py  middleware.py
app/infrastructure/repositories/: __init__.py  base.py  chat.py  log.py  notification.py  placement.py  user.py
app/infrastructure/security/: __init__.py  password.py  session.py
app/infrastructure/services/: __init__.py  daily_client.py  geofence.py
app/presentation/: __init__.py
app/presentation/assets/: call_notifications.js  chat_manager.js  custom.css  sw.js  sync_manager.js  video_call.js
app/presentation/components/: __init__.py
app/presentation/components/domain/: __init__.py  auth.py
app/presentation/components/shared/: __init__.py  icons.py  theme.py
app/presentation/components/ui/: __init__.py  badges.py  cards.py  (+4 more)
app/presentation/routes/: auth.py  calls.py  chat.py  notifications.py  student.py  supervisor.py
data/: students.json  supervisors.json
(+9 files in other folders)
